src/test/deca/syntax/invalid/resultats/test34_class_decl-lex.res
'class': [@0,322:326='class',<7>,15:0]
IDENT: [@1,328:328='A',<26>,15:6]
'{': [@2,330:330='{',<36>,15:8]
